feat(thesis): daily update

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -138,6 +138,20 @@
   note = {Accessed on: 2024.09.16.}
 }
 
+@misc {TCPUDPPICS,
+  author = {Trueconf},
+  title = {TCP and UDP},
+  url = {https://trueconf.com/blog/wp-content/uploads/2022/01/packet-formats-1-690x294.png},
+  note = {Accessed on: 2024.09.17.}
+}
+
+@misc {UDP,
+  author = {GeeksforGeeks},
+  title = {UDP},
+  url = {https://www.geeksforgeeks.org/user-datagram-protocol-udp/},
+  note = {Accessed on: 2024.09.17.}
+}
+
 
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
