--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{comment}
 \usepackage[magyar]{babel}
 \usepackage{amsmath}
+\usepackage{ragged2e}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
