--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -130,7 +130,7 @@ mivel a következő parancs megadásával már használhatóvá válik a program
 Ez a sor a program vezérlését AVX2-re állítja át, és mivel ezt az utasításkészletet már ismeri az AMD Ryzen processzor
 is ezért a probléma már a múlté.
 Az indító fájl további sorai optimalizálások a számítások gyorsítására, és a párhuzamosítására, ezzel jobban kihasználva
-a rendelkezésre álló hardver erőforrásokat.
+a rendelkezésre álló hardver erőforrásokat.\newpage
 %----------------------------------------------------------------------------
 \begin{lstlisting}[caption={A Display 2.3.4 b1 indító ".bat" scriptje AMD Ryzen processzorokhoz}, label=batcode, xleftmargin=\parindent]
     @echo off
