feat(thesis): daily update

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -152,6 +152,13 @@
   note = {Accessed on: 2024.09.17.}
 }
 
+@misc {DSPARRAYS,
+  author = {Martin Audio},
+  title = {DSP Arrays},
+  url = {https://static.martin-audio.com/downloads/brochures/wpl-brochure.pdf},
+  note = {Accessed on: 2024.09.17.}
+}
+
 
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
