feat(thesis): daily update

--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -294,7 +294,7 @@ Ehhez egyedi digitális jelkezelést (DSP) és egyedi erősítést alkalmaznak m
 %----------------------------------------------------------------------------
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\linewidth, keepaspectratio]{figures/dsp_arrays.png}
+    \includegraphics[width=\linewidth, keepaspectratio]{figures/dsp_arrays.jpg}
     \caption{DSP-vezérelt Line Array~\cite{AHNERT2023}}
     \label{fig:dsp_arrays}
 \end{figure}
