--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -196,14 +196,14 @@ Szerencsére ez a koncepció elterjedt és jelenleg minden audiohálózati szabv
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/link_offset_latency.png}
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/link_offset_latency.jpg}
 	\caption{A kapcsolati eltolás meghatározza a késleltetést~\cite{AHNERT2023}}
 	\label {fig:link_offset_latency}
 \end{figure}
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/phase_coherence_link_offset.png}
+	\includegraphics[width=\linewidth, keepaspectratio]{figures/phase_coherence_link_offset.jpg}
 	\caption{Fáziskoherencia azonos kapcsolati eltolással~\cite{AHNERT2023}}
 	\label {fig:phase_coherence_link_offset}
 \end{figure}
@@ -414,12 +414,12 @@ míg a hosztcím a maradék jobb oldal, ahol az alhálózati maszk `0'-át jelzi
     \centering
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=67mm, keepaspectratio]{figures/host_a.png}
+        \includegraphics[width=67mm, keepaspectratio]{figures/host_a.jpg}
         \caption{Host A}
     \end{minipage}\hfill
     \begin{minipage}{0.45\textwidth}
         \centering
-        \includegraphics[width=67mm, keepaspectratio]{figures/host_b.png}
+        \includegraphics[width=67mm, keepaspectratio]{figures/host_b.jpg}
         \caption{Host B}
     \end{minipage}
 \end{figure}
@@ -431,7 +431,7 @@ mutat. Ezen két eszköz között egy router sem szükséges.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=67mm, keepaspectratio]{figures/host_c.png}
+	\includegraphics[width=67mm, keepaspectratio]{figures/host_c.jpg}
 	\caption{Host C}
 	\label {fig:host_c}
 \end{figure}
@@ -546,7 +546,7 @@ monitorozható a hálózat állapota amennyiben probléma merülne fel.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=100mm, keepaspectratio]{figures/tcp_udp.png}
+	\includegraphics[width=100mm, keepaspectratio]{figures/tcp_udp.jpg}
 	\caption{TCP és UDP összehasonlítás~\cite{TCPUDPPICS}}
 	\label {fig:tcp_udp}
 \end{figure}
@@ -767,7 +767,7 @@ köztük az olimpiai játékokon és nagy zenei koncerteken alkalmazták.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=50mm, keepaspectratio]{figures/audinate_logo.png}
+	\includegraphics[width=50mm, keepaspectratio]{figures/audinate_logo.jpg}
 	\caption{Az Audinate logója}
 	\label {fig:audinate_logo}
 \end{figure}
