feat(thesis): daily update

--- a/content/audio_basics.tex
+++ b/content/audio_basics.tex
@@ -221,24 +221,23 @@ fizikai tulajdonságait, vagyis a hullámokban terjedő energiát méri.
     \caption{Decibel skála~\cite{DECIBELSCALE}}\label{fig:db_scale}
 \end{figure}
 %----------------------------------------------------------------------------
-A legkisebb észlelhető hangerő 0 dB, amelyet az emberi fül éppen hogy észlel. 
-Kellemesnek találjuk a körülbelül 50 dB-es hangerőt, míg a 100 dB-es szint már kellemetlennek számít. 
-A fájdalomküszöb körülbelül 120 dB-nél található. Fontos megjegyezni, hogy a 100 dB nem 
-kétszer olyan hangos, mint az 50 dB; a hangerő érzékelése szubjektív, és az egyéni hallóképességtől függ. 
-Általánosságban elmondható, hogy minden 10 dB-es növekedés körülbelül kétszer olyan 
-hangosnak érzékelhető, így a 60 dB-es hangerő kétszer hangosabbnak tűnik, mint az 50 dB-es.
-A decibelskála logaritmikus alapú, így a decibelben megadott értékek nem lineárisan arányosak. 
-Például 120 dB nem kétszer olyan hangos, mint 60 dB, hanem annak hangnyomása körülbelül 1000-szer nagyobb. 
-Különböző súlyozással mérhetjük a hangnyomást, például A, C, és Z súlyozással, na de mit is jelent ez?
-Amennyiben egy hang az egész frekvenciatartományban egyenlő hangnyomással rendelkezik, 
-akkor ezt a Z-súlyozási görbével lehet ábrázolni. Az emberi fül által észlelt hangokat 
-az A-súlyozási görbe képviseli. Mivel az akusztikus hang tartalmaz alacsonyabb és 
-magasabb frekvenciákat is, mint amit az emberi fül képes érzékelni, az A-súlyozás 
-pontosan tükrözi az emberi hallás frekvenciaválaszát. A C-súlyozás pedig azt a 
-hangélményt reprezentálja, amelyet akkor tapasztalunk, amikor a hang intenzitása 
-megnő, ilyenkor érzékenyebbé válunk az alacsonyabb frekvenciákra. Az A- és 
-C-súlyozás tehát a legalkalmasabb az emberi fül számára valódi világ hangjainak 
-frekvenciaválaszának leírására.
+Az emberi fül által észlelt legkisebb hangerősség 0 dB, amely alig érzékelhető. 
+A 50 dB körüli hangerőt kellemesnek találjuk, míg a 100 dB-es szint már kellemetlenséget 
+okozhat. A fájdalomküszöb nagyjából 120 dB-nél helyezkedik el. Érdemes megjegyezni, hogy 
+a 100 dB nem kétszerese az 50 dB-nek hangerősség szempontjából. A hangerő érzékelése 
+szubjektív, és az egyéni hallási képességek határozzák meg. Általában egy 10 dB-es 
+növekedést körülbelül kétszer olyan hangosnak érzékelünk, tehát egy 60 dB-es hangerőt 
+körülbelül kétszer hangosabbnak érzünk, mint az 50 dB-eset. Mivel a decibelskála logaritmikus 
+alapú, a dB-ben megadott értékek nem lineárisan arányosak. Például a 120 dB nem kétszerese 
+a 60 dB-nek, hanem a hangnyomása hozzávetőlegesen ezerszer nagyobb. A hangnyomás mérésére 
+különböző súlyozási görbéket alkalmazhatunk, például A, C és Z súlyozást. Mit is jelentenek 
+ezek? Ha egy hang az összes frekvenciatartományban egyenlő hangnyomással rendelkezik, azt a 
+Z-súlyozási görbe segítségével ábrázolhatjuk. Az emberi fül által észlelt hangokat az 
+A-súlyozási görbe írja le, amely pontosan tükrözi az emberi hallás frekvenciatartományát, mivel 
+az emberi hallás nem érzékel minden frekvenciát egyformán. A C-súlyozás a hangélményt 
+reprezentálja, amikor a hangerő növekedésével az alacsonyabb frekvenciák iránti érzékenység is 
+fokozódik. Az A- és C-súlyozás tehát a leginkább megfelelő az emberi hallás valósághű 
+frekvenciaválaszának modellezésére.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
