--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -123,7 +123,7 @@ bővítése előtt alaposan mérlegelni kell, megtérül-e a befektetés hosszab
 \end{figure}
 %----------------------------------------------------------------------------
 %----------------------------------------------------------------------------
-\subsection{Bővítés nagyobb interfészre és keverőpultra - Allen \& Heath dLive}
+\subsection{Bővítés nagyobb interfészre és keverőpultra}
 %----------------------------------------------------------------------------
 Tegyük fel, hogy egy szimfonikus zenekar koncertjét szeretnénk hangosítani, ahol a zenekar
 tagjainak száma meghaladja a 64 főt és mindenki dedikált mikrofonnal rendelkezik. Ebben az
