--- a/content/acknowledgement.tex
+++ b/content/acknowledgement.tex
@@ -7,16 +7,13 @@ Külső konzulensemnek, Tamás Dávidnak szintén mély hálával tartozom az á
 amelyeket gondos átnézésre, hasznos visszajelzések adására fordított, és hálás vagyok türelméért, valamint megértéséért. Valamint
 megtiszteltetés volt számomra, hogy ez a hangrendszer a szakdolgozatom keretein belül valósulhatott meg.
 
+Ezúton szeretnék külön köszönetet mondani Prof. Dr. Wersényi Györgynek 
+a hangtechnikával kapcsolatos értékes megjegyzéseiért és segítségéért, amelyek jelentősen hozzájárultak a dolgozatom szakmai minőségéhez.
+
 Köszönetet szeretnék mondani a TéDé Rendezvényeknél dolgozó kollégáimnak is, akik minden ötletemet, 
 legyen az bármilyen különleges, támogatták, és segítettek azok megvalósításában. A közös munka eredménye önmagáért beszél
 a sok pozitív visszajelzés és sikeres rendezvény után.
-%----------------------------------------------------------------------------
-\begin {figure}[h!]
-    \centering
-    \includegraphics[width=0.5\textwidth]{figures/danci_wpc.jpg}
-    \caption{A szakdolgozat szerzője a megépített WPC Line Array mögött az adott rendezvényen}
-\end {figure}
-%----------------------------------------------------------------------------
+
 A csapattal végzett munkából szerzett tapasztalatok és élmények értékes betekintést nyújtottak a mérnöki 
 szakma gyakorlati oldalába. Rávilágítottak arra, hogy a valóságban gyakran másképp alakulnak a dolgok, mint ahogy azt a tervezés során elképzeljük. 
 Megtanultam alkalmazkodni, gyorsan reagálni a változásokra és kihívásokra, valamint nagy hangsúlyt fektetni a csapatmunkára. 
