feat(thesis): daily update

--- a/content/acknowledgement.tex
+++ b/content/acknowledgement.tex
@@ -12,7 +12,8 @@ a hangtechnikával kapcsolatos értékes megjegyzéseiért és segítségéért,
 
 Köszönetet szeretnék mondani a TéDé Rendezvényeknél dolgozó kollégáimnak is, akik minden ötletemet, 
 legyen az bármilyen különleges, támogatták, és segítettek azok megvalósításában. A közös munka eredménye önmagáért beszél
-a sok pozitív visszajelzés és sikeres rendezvény után.
+a sok pozitív visszajelzés és sikeres rendezvény után. Szintén köszönettel tartozom a BG Event Kft. munkatársainak,
+mivel a szakdolgozatban feldolgozott hangrendszer a cég által biztosított rendezvényen valósulhatott meg.
 
 A csapattal végzett munkából szerzett tapasztalatok és élmények értékes betekintést nyújtottak a mérnöki 
 szakma gyakorlati oldalába. Rávilágítottak arra, hogy a valóságban gyakran másképp alakulnak a dolgok, mint ahogy azt a tervezés során elképzeljük. 
