feat(thesis): daily update

--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -990,14 +990,14 @@ minőségveszteséggel érhetők el nagy távolságokra.
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/dsnake-p2p.jpg}
+	\includegraphics[width=320px, keepaspectratio]{figures/dsnake-p2p.jpg}
 	\caption{Digital Snake és Pont-pont közötti (P2P) kapcsolatok}
 	\label {fig:dsnake-p2p}
 \end{figure}
 %----------------------------------------------------------------------------
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\linewidth, keepaspectratio]{figures/dante-solution.jpg}
+	\includegraphics[width=320px, keepaspectratio]{figures/dante-solution.jpg}
 	\caption{Dante hálózati megoldás}
 	\label {fig:dante-solution}
 \end{figure}
@@ -1045,27 +1045,28 @@ elősegítik a gyártók munkáját azáltal, hogy lehetővé teszik a Dante-kom
 gyors és hatékony létrehozását, valamint egyszerű integrációjukat a meglévő termékekbe.
 %----------------------------------------------------------------------------
 \begin{table}[h!]
-	\centering
-	\begin{tabular}{|c|p{10cm}|}
-		\hline
-		\textbf{Chip} & \textbf{Leírás} \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/ultimo-x.jpg} & \textbf{Dante Ultimo-X} - 0x4, 2x2, 4x0 \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/broadway.jpg} & \textbf{Dante Broadway} - 16x16 \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/brooklyn-ii.jpg} & \textbf{Dante Brooklyn II} - 64x64 \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/pcie-r.jpg} & \textbf{Dante PCIe-R} - 128x128 \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/dante-hc.jpg} & \textbf{Dante HC (High Capacity)} - 512x512 \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/shared-processor.jpg} & \textbf{Dante Shared Processor} - IP Core 512x512 FPGA and Dante Embedded Platform 64x64 X86/ARM \\
-		\hline
-		\includegraphics[width=40px,height=40px,keepaspectratio]{figures/dante-av.jpg} & \textbf{Dante AV} - V:1, A:8 \\
-		\hline
-	\end{tabular}
-	\caption{Különböző Dante chipek}
-	\label{tab:dante_chips}
+    \centering
+    \begin{tabular}{|>{\centering\arraybackslash}m{3cm}|>{\centering\arraybackslash}m{5cm}|>{\centering\arraybackslash}m{4cm}|}
+        \hline
+        \textbf{Kép} & \textbf{Chip neve} & \textbf{Interfész nagysága (ki/bemenetek)} \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/ultimo-x.jpg} & \textbf{Dante Ultimo-X} & 0x4, 2x2, 4x0 \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/broadway.jpg} & \textbf{Dante Broadway} & 16x16 \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/brooklyn-ii.jpg} & \textbf{Dante Brooklyn II} & 64x64 \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/pcie-r.jpg} & \textbf{Dante PCIe-R} & 128x128 \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/dante-hc.jpg} & \textbf{Dante HC (High Capacity)} & 512x512 \\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/shared-processor.jpg} & \textbf{Dante Shared Processor} & IP Core 512x512, FPGA/Dante Embedded Platform 64x64\\
+        \hline
+        \includegraphics[width=40px,height=40px,keepaspectratio]{figures/dante-av.jpg} & \textbf{Dante AV} & Video: 1, Audio: 8 \\
+        \hline
+    \end{tabular}
+    \caption{Különböző Dante chipek és interfészeik}
+    \label{tab:dante_chips}
 \end{table}
 %----------------------------------------------------------------------------
+
