--- a/thesis.tex
+++ b/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage[magyar]{babel}
 \usepackage{amsmath}
 \usepackage{ragged2e}
+\usepackage{array}
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
